# triton-old

./: CMakeLists.txt  pyproject.toml  triton
f2reduce/backend/: CMakeLists.txt  name.conf  plugin.cpp
lib/Conversion/TritonGPUToLLVM/: CMakeLists.txt
python/: meson.build  pyproject.toml
